sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:9: error: not found: value x
		x=true
                ^AlgBubbleSort3:12: error: not found: value x
	if(x==false){
           ^